zetasql/parser/testdata/show.test
show ;
--
ERROR: Syntax error: Unexpected ";" [at 1:6]
show ;
     ^
==

show TABLES adwords;
--
ERROR: Syntax error: Expected end of input but got identifier "adwords" [at 1:13]
show TABLES adwords;
            ^
==

show catalog.tables
--
ERROR: Syntax error: Expected end of input but got "." [at 1:13]
show catalog.tables
            ^
==

show TABLES;
--
ShowStatement [0-11] [show TABLES]
  Identifier(TABLES) [5-11] [TABLES]
--
SHOW TABLES
==

show TABLES from;
--
ERROR: Syntax error: Unexpected ";" [at 1:17]
show TABLES from;
                ^
==

show TABLES from adwords;
--
ShowStatement [0-24] [show TABLES from adwords]
  Identifier(TABLES) [5-11] [TABLES]
  PathExpression [17-24] [adwords]
    Identifier(adwords) [17-24] [adwords]
--
SHOW TABLES FROM adwords
==

show TABLES from catalog.adwords;
--
ShowStatement [0-32] [show TABLES...catalog.adwords]
  Identifier(TABLES) [5-11] [TABLES]
  PathExpression [17-32] [catalog.adwords]
    Identifier(catalog) [17-24] [catalog]
    Identifier(adwords) [25-32] [adwords]
--
SHOW TABLES FROM catalog.adwords
==

show TABLES from adwords like;
--
ERROR: Syntax error: Expected string literal but got ";" [at 1:30]
show TABLES from adwords like;
                             ^
==

show TABLES like 'KitchenSync%';
--
ShowStatement [0-31] [show TABLES...KitchenSync%']
  Identifier(TABLES) [5-11] [TABLES]
  StringLiteral('KitchenSync%') [17-31] ['KitchenSync%']
--
SHOW TABLES LIKE 'KitchenSync%'
==

show COLUMNS from KitchenSync;
--
ShowStatement [0-29] [show COLUMNS from KitchenSync]
  Identifier(COLUMNS) [5-12] [COLUMNS]
  PathExpression [18-29] [KitchenSync]
    Identifier(KitchenSync) [18-29] [KitchenSync]
--
SHOW COLUMNS FROM KitchenSync
==

show INDEXES from myschema.MyTable;
--
ShowStatement [0-34] [show INDEXES...yschema.MyTable]
  Identifier(INDEXES) [5-12] [INDEXES]
  PathExpression [18-34] [myschema.MyTable]
    Identifier(myschema) [18-26] [myschema]
    Identifier(MyTable) [27-34] [MyTable]
--
SHOW INDEXES FROM myschema.MyTable
==

show STATUS;
--
ShowStatement [0-11] [show STATUS]
  Identifier(STATUS) [5-11] [STATUS]
--
SHOW STATUS
==

show VARIABLES like 'server_name';
--
ShowStatement [0-33] [show VARIABLES...server_name']
  Identifier(VARIABLES) [5-14] [VARIABLES]
  StringLiteral('server_name') [20-33] ['server_name']
--
SHOW VARIABLES LIKE 'server_name'
==

show TABLES from adwords like b'abc%';
--
ERROR: Syntax error: Expected string literal but got bytes literal b'abc%' [at 1:31]
show TABLES from adwords like b'abc%';
                              ^
==

show TABLES from adwords like 5;
--
ERROR: Syntax error: Expected string literal but got integer literal "5" [at 1:31]
show TABLES from adwords like 5;
                              ^
==

show TABLES from catalog.adwords like 'KitchenSync%';
--
ShowStatement [0-52] [show TABLES...KitchenSync%']
  Identifier(TABLES) [5-11] [TABLES]
  PathExpression [17-32] [catalog.adwords]
    Identifier(catalog) [17-24] [catalog]
    Identifier(adwords) [25-32] [adwords]
  StringLiteral('KitchenSync%') [38-52] ['KitchenSync%']
--
SHOW TABLES FROM catalog.adwords LIKE 'KitchenSync%'
==

SHOW MATERIALIZED VIEWS;
--
ShowStatement [0-23] [SHOW MATERIALIZED VIEWS]
  Identifier(`MATERIALIZED VIEWS`) [5-23] [MATERIALIZED VIEWS]
--
SHOW `MATERIALIZED VIEWS`
==

SHOW `MATERIALIZED VIEWS`;
--
ShowStatement [0-25] [SHOW `MATERIALIZED VIEWS`]
  Identifier(`MATERIALIZED VIEWS`) [5-25] [`MATERIALIZED VIEWS`]
--
SHOW `MATERIALIZED VIEWS`
==

SHOW MATERIALIZED VIEWS like 'KitchenSync%';
--
ShowStatement [0-43] [SHOW MATERIALIZED...chenSync%']
  Identifier(`MATERIALIZED VIEWS`) [5-23] [MATERIALIZED VIEWS]
  StringLiteral('KitchenSync%') [29-43] ['KitchenSync%']
--
SHOW `MATERIALIZED VIEWS` LIKE 'KitchenSync%'
==

SHOW MATERIALIZED VIEWS from KitchenSync;
--
ShowStatement [0-40] [SHOW MATERIALIZED...itchenSync]
  Identifier(`MATERIALIZED VIEWS`) [5-23] [MATERIALIZED VIEWS]
  PathExpression [29-40] [KitchenSync]
    Identifier(KitchenSync) [29-40] [KitchenSync]
--
SHOW `MATERIALIZED VIEWS` FROM KitchenSync
==

SHOW MATERIALIZED VIEWS from KitchenSync like '%foo%';
--
ShowStatement [0-53] [SHOW MATERIALIZED...ke '%foo%']
  Identifier(`MATERIALIZED VIEWS`) [5-23] [MATERIALIZED VIEWS]
  PathExpression [29-40] [KitchenSync]
    Identifier(KitchenSync) [29-40] [KitchenSync]
  StringLiteral('%foo%') [46-53] ['%foo%']
--
SHOW `MATERIALIZED VIEWS` FROM KitchenSync LIKE '%foo%'
==

SHOW MATERIALIZED TABLES
--
ERROR: Syntax error: Expected end of input but got identifier "TABLES" [at 1:19]
SHOW MATERIALIZED TABLES
                  ^
==

SHOW MATERIALIZED TABLES from KitchenSync
--
ERROR: Syntax error: Expected end of input but got identifier "TABLES" [at 1:19]
SHOW MATERIALIZED TABLES from KitchenSync
                  ^
==

[no_test_get_parse_tokens]
[language_features={{|V_1_3_ALLOW_DASHES_IN_TABLE_NAME}}]
SHOW TABLES FROM my-project.dataset.table;
--
ALTERNATION GROUP: <empty>
--
ERROR: Syntax error: Table name contains '-' character. It needs to be quoted: `my-project.dataset.table` [at 1:18]
SHOW TABLES FROM my-project.dataset.table;
                 ^
--
ALTERNATION GROUP: V_1_3_ALLOW_DASHES_IN_TABLE_NAME
--
ShowStatement [0-41] [SHOW TABLES...dataset.table]
  Identifier(TABLES) [5-11] [TABLES]
  PathExpression [17-41] [my-project.dataset.table]
    Identifier(`my-project`) [17-27] [my-project]
    Identifier(dataset) [28-35] [dataset]
    Identifier(table) [36-41] [table]
--
SHOW TABLES FROM `my-project`.dataset.table
==

[no_test_get_parse_tokens]
[language_features=V_1_3_ALLOW_DASHES_IN_TABLE_NAME{{|,V_1_3_ALLOW_SLASH_PATHS}}]
SHOW TABLES FROM /span/db/my-mdb-grp:my_db
--
ALTERNATION GROUP: <empty>
--
ERROR: Syntax error: Table name contains '/' character. It needs to be quoted: `/span/db/my-mdb-grp:my_db` [at 1:18]
SHOW TABLES FROM /span/db/my-mdb-grp:my_db
                 ^
--
ALTERNATION GROUP: ,V_1_3_ALLOW_SLASH_PATHS
--
ShowStatement [0-42] [SHOW TABLES...-grp:my_db]
  Identifier(TABLES) [5-11] [TABLES]
  PathExpression [17-42] [/span/db/my-mdb-grp:my_db]
    Identifier(`/span/db/my-mdb-grp:my_db`) [17-42] [/span/db/my-mdb-grp:my_db]
--
SHOW TABLES FROM `/span/db/my-mdb-grp:my_db`
